trying to fix vh unit mobile view on ios

--- a/src/assets/stylesheets/App.scss
+++ b/src/assets/stylesheets/App.scss
@@ -24,7 +24,9 @@
 
   &__loader {
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
+  /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
     position: absolute;
     display: flex;
     justify-content: center;
@@ -79,19 +81,28 @@
   &__bg {
     position: absolute;
     overflow: hidden;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
+  /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
+
 
     picture {
       object-fit: cover;
-      width: 100vw;
+      width: 100%;
       height: 100vh;
+  /* mobile viewport bug fix */
+      min-height: -webkit-fill-available;
+
     }
 
     img {
       object-fit: cover;
-      width: 100vw;
+      width: 100%;
       height: 100vh;
+  /* mobile viewport bug fix */
+      min-height: -webkit-fill-available;
+
     }
   }
 
@@ -106,7 +117,6 @@
     grid-row: 3/4;
     place-self: center;
     position: relative;
-    margin: 0 0 14rem 0;
   }
 
   &__screen {
@@ -188,9 +198,7 @@
     }
   }
   @include xl-screen {
-    &__navbar {
-      margin: 0;
-    }
+    
     &__screen {
       &__draw {
         left: 65%;
@@ -211,9 +219,7 @@
     }
   }
   @include xxl-screen {
-    &__navbar {
-      margin: 0;
-    }
+    
     &__screen {
       &__draw {
         left: 65%;
@@ -235,9 +241,7 @@
   }
 
   @include medium-screen {
-    &__navbar {
-      margin: 0;
-    }
+    
     &__screen {
       &__draw {
         left: 55%;
