--- a/src/assets/stylesheets/_Variables.scss
+++ b/src/assets/stylesheets/_Variables.scss
@@ -59,6 +59,9 @@ $secondaryFont: "San Francisco Display Thin";
     padding: 0;
     font-family: $primaryFont;
     color: $textColor;
+    min-height: 100vh;
+    /* mobile viewport bug fix */
+    min-height: -webkit-fill-available;
 }
 
 @mixin divImg($bgSize) {
